--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Piškvorky</h1>
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, 
         takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+        <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">Pravidla</a>
+        <a href="index.html">Zacit hrat</a>
 </body>
 </html>
