--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="styly.css">
 </head>
 <body>
+    <div class="flex-container">
+        <div class="uvodni">
     <img src= "podklady/uvodni.jpg" alt="Uvodni obazek">
+        </div>
+        <div class="piskvorky">
     <h1>Piškvorky</h1>
+        </div>  
+        <div class="popis">
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, 
         takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
-        <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">Pravidla</a> <br>
-        <a href="index.html">Zacit hrat</a>
+        </div>
+       <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a> <br>
+    
+       <a href="index.html" class="hra">Zacit hrat</a> 
+    
+    </div>
 </body>
 </html>
