--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 <body>
     <div class="flex-container">
-        <div class="uvodni">
-    <img src= "podklady/uvodni.jpg" alt="Uvodni obazek">
-        </div>
-        <div class="piskvorky">
-    <h1>Piškvorky</h1>
-        </div>  
-        <div class="popis">
+    <img src= "/uvodni.jpg" alt="Uvodni obazek">    
+    <h1>Piškvorky</h1>     
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, 
         takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
-        </div>
-       <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a> <br>
-    
+        <section>
+       <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a> 
+    </section>
+  <section>
        <a href="index.html" class="hra">Zacit hrat</a> 
-    
+    </section>
     </div>
 </body>
 </html>
