Drobne opravy po review

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
    <link rel="stylesheet" href="styly.css">
+   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"/>
 </head>
 <body>
     <div class="flex-container">
-    <img src= "/uvodni.jpg" alt="Uvodni obazek">    
+    <img src= "/uvodni.jpg" alt="Čtyřlístek">    
     <h1>Piškvorky</h1>     
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, 
         takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
