--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="styly.css">
-   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="styly.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
 </head>
+
 <body>
     <div class="flex-container">
-    <img src= "/uvodni.jpg" alt="Čtyřlístek">    
-    <h1>Piškvorky</h1>     
-    <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, 
-        takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+        <img src="uvodni.jpg" alt="Čtyřlístek">
+        <h1>Piškvorky</h1>
+        <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným
+            papírem. Nyní můžete využít naši skvělou aplikaci,
+            takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
         <section>
-       <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a> 
-    </section>
-  <section>
-       <a href="index.html" class="hra">Zacit hrat</a> 
-    </section>
+            <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a>
+        </section>
+        <section>
+            <a href="index.html" class="hra">Zacít hrát</a>
+        </section>
     </div>
 </body>
+
 </html>
