Druha cast ukolu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="pravidla">Pravidla</a>
         </section>
         <section>
-            <a href="index.html" class="hra">Zacít hrát</a>
+            <a href="hra.html" class="hra">Zacít hrát</a>
         </section>
     </div>
 </body>
