--- a/hra.html
+++ b/hra.html
@@ -12,9 +12,9 @@
     <section class="topbutton">
     <p>HRAJE: </p> 
     <p class="kolo"> ⃝ </p>
-    <button class="domu"> <img src="home.svg" class="home" alt="home"/> <a href="index.html"></a> 
+    <button class="domu"></button> <img src="home.svg" class="home" alt="home"/> <a href="index.html"></a> 
     </button>
-    <button class="obnovit"> <img src="restart.svg" class="restart" alt="restart"/> <a href="hra.html"></a> 
+    <button  class="obnovit"> <img src="restart.svg" class="restart" alt="restart"/>  <a href="hra.html"></a>
     </button>
     </section>
     <section class="table">
