--- a/hra.html
+++ b/hra.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="hra.styly.css">
 </head>
+
 <body>
     <h1>Piškvorky</h1>
     <section class="topbutton">
-    <p>HRAJE: </p> 
-    <p class="kolo"> ⃝ </p>
-    <button class="domu"> <img src="home.svg" class="home" alt="home"/> <a href="index.html"></a> 
-    </button>
-    <button  class="obnovit"> <img src="restart.svg" class="restart" alt="restart"/> <a href="hra.html"></a>
-    </button>
+        <p> HRAJE: </p>
+        <p class="kolo"> ⃝ </p>
+        <section> <a href="index.html" class="domu"> <img src="home.svg" class="home" alt="home"/> </a>
+        </section>
+        <section> <a href="hra.html" class="obnovit"> <img src="restart.svg" class="restart" alt="restart" /> </a>
+        </section>
     </section>
-    <section class="table">
+    <div class="table">
         <button class="cell"></button>
         <button class="cell"></button>
         <button class="cell"></button>
@@ -118,6 +120,6 @@
         <button class="cell"></button>
         <button class="cell"></button>
         <button class="cell"></button>
-    </section>
+    </div>
 </body>
 </html>
