--- a/hra.html
+++ b/hra.html
@@ -6,120 +6,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="hra.styly.css">
+    <link rel="stylesheet" href="styly.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" />
 </head>
 
-<body>
-    <h1>Piškvorky</h1>
-    <section class="topbutton">
-        <p> HRAJE: </p>
-        <p class="kolo"> ⃝ </p>
-        <section> <a href="index.html" class="domu"> <img src="home.svg" class="home" alt="home"/> </a>
-        </section>
-        <section> <a href="hra.html" class="obnovit"> <img src="restart.svg" class="restart" alt="restart" /> </a>
-        </section>
-    </section>
-    <div class="table">
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
-        <button class="cell"></button>
+<body class="game">
+    <h1 class="game-main-title">Piškvorky</h1>
+    <div class="game-menu">
+            <p class="game-player"> HRAJE: </p>
+            <p class="game-circle"> ⃝ </p>
+        <button class="menu-button">
+             <a href="index.html" class="game-menu-home"> 
+                <svg xmlns="http://www.w3.org/2000/svg" 
+                width="24" height="24" viewBox="0 0 24 24">
+                <path d="M21 13v10h-6v-6h-6v6h-6v-10h-3l12-12 12 12h-3zm-1-5.907v-5.093h-3v2.093l3 3z" fill="#fff" />
+            </svg> 
+        </a>
+        </button>
+            <button class="menu-button"> <a href="hra.html" class="game-menu-restart"> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M13.5 2c-5.629 0-10.212 4.436-10.475 10h-3.025l4.537 5.917 4.463-5.917h-2.975c.26-3.902 3.508-7 7.475-7 4.136 0 7.5 3.364 7.5 7.5s-3.364 7.5-7.5 7.5c-2.381 0-4.502-1.119-5.876-2.854l-1.847 2.449c1.919 2.088 4.664 3.405 7.723 3.405 5.798 0 10.5-4.702 10.5-10.5s-4.702-10.5-10.5-10.5z" fill="#fff" />
+            </svg>
+         </a>
+            </button>
+    </div>
+    <div class="game-field">
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
+        <button class="game-cell"></button>
     </div>
 </body>
+
 </html>
