Last changes after review

--- a/hra.html
+++ b/hra.html
@@ -15,7 +15,7 @@
     <h1 class="game-main-title">Piškvorky</h1>
     <div class="game-menu">
         <p class="game-player"> HRAJE: </p>
-        <p class="gamer"> ⃝ </p>
+        <span id="gamer" class="board__player--circle"> </span> 
         <button class="menu-button">
             <a href="index.html" class="game-menu-home">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -35,16 +35,16 @@
     </div>
     <div class="game-field ">
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button id = "firstbtn" class="game-cell"></button>
+        <button id = "secondbtn" class="game-cell"></button>
+        <button id = "thirdbtn"class="game-cell"></button>
+        <button id = "fourthbtn" class="game-cell"></button>
+        <button id = "fifthbtn" class="game-cell"></button>
+        <button id = "sixthbtn" class="game-cell"></button>
+        <button id = "seventhbtn" class="game-cell"></button>
+        <button id = "eighthbtn" class="game-cell"></button>
+        <button id = "ninthbtn" class="game-cell"></button>
+        <button id = "tenthbtn" class="game-cell"></button>
 
         <button class="game-cell"></button>
         <button class="game-cell"></button>
