--- a/hra.html
+++ b/hra.html
@@ -12,139 +12,134 @@
 </head>
 
 <body class="game">
+    <main>
     <h1 class="game-main-title">Piškvorky</h1>
     <div class="game-menu">
         <p class="game-player"> HRAJE: </p>
-        <span id="gamer" class="board__player--circle"> </span> 
+        <span class="current-player player-circle"> </span> 
         <button class="menu-button">
-            <a href="index.html" class="game-menu-home">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M21 13v10h-6v-6h-6v6h-6v-10h-3l12-12 12 12h-3zm-1-5.907v-5.093h-3v2.093l3 3z"
-                        fill="#fff" />
-                </svg>
-            </a>
+            <a  class="game-menu-home" href="../"
+            ><img src="./img/home.svg" alt="domů"/>
+        </a>
         </button>
-        <button class="menu-button"> <a href="hra.html" class="game-menu-restart">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M13.5 2c-5.629 0-10.212 4.436-10.475 10h-3.025l4.537 5.917 4.463-5.917h-2.975c.26-3.902 3.508-7 7.475-7 4.136 0 7.5 3.364 7.5 7.5s-3.364 7.5-7.5 7.5c-2.381 0-4.502-1.119-5.876-2.854l-1.847 2.449c1.919 2.088 4.664 3.405 7.723 3.405 5.798 0 10.5-4.702 10.5-10.5s-4.702-10.5-10.5-10.5z"
-                        fill="#fff" />
-                </svg>
-            </a>
+        <button class="menu-button"> <a class="game-menu-restart" href="hra.html"
+            ><img src="./img/restart.svg" alt="hrát"/>
+          </a>
         </button>
     </div>
-    <div class="game-field ">
 
-        <button id = "firstbtn" class="game-cell"></button>
-        <button id = "secondbtn" class="game-cell"></button>
-        <button id = "thirdbtn"class="game-cell"></button>
-        <button id = "fourthbtn" class="game-cell"></button>
-        <button id = "fifthbtn" class="game-cell"></button>
-        <button id = "sixthbtn" class="game-cell"></button>
-        <button id = "seventhbtn" class="game-cell"></button>
-        <button id = "eighthbtn" class="game-cell"></button>
-        <button id = "ninthbtn" class="game-cell"></button>
-        <button id = "tenthbtn" class="game-cell"></button>
+    <section class="game-field ">
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
 
-    </div>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+        <button class="cell"></button>
+    </section>
+</main>
 </body>
 
 </html>
